refactor: change responses to return Bundle::toPublicMap